Bug 512876 - Skanpage does not remember scan area size
Summary: Skanpage does not remember scan area size
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-02 17:29 UTC by Branislav Klocok
Modified: 2025-12-29 06:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Branislav Klocok 2025-12-02 17:29:21 UTC
When I start the application, it is always shown as custom. I change later to A4, but when I close and open again, it's custom.
I do not know where it stores this setting. I assume it takes it from the scanner, but I am not aware of such option there.

Operating System: openSUSE Tumbleweed 20251127
KDE Plasma Version: 6.5.3
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.9-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 8 GiB of RAM (7.5 GiB usable)
Graphics Processor: Intel® UHD Graphics 620
Manufacturer: LENOVO
Product Name: 20KGS2HB00
System Version: ThinkPad X1 Carbon 6th

scanimage --version
scanimage (sane-backends) 1.2.1; backend version 1.2.1
Comment 1 Bug Janitor Service 2025-12-28 21:52:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/libraries/ksanecore/-/merge_requests/36
Comment 2 Nicola 2025-12-29 06:46:57 UTC
Git commit 26016dba7ba14f336feb2975ffc26c82457c485f by Nicola Felice.
Committed on 28/12/2025 at 21:30.
Pushed by sars into branch 'master'.

Fix unselectable A4 page size

Problem: observed on a Brother MFC-L3770CDW using the program Skanpage. When
setting A4 as page size, the combobox switches automatically to the
"Custom" value.

Solution: I do not understand the exact purpose of the code but the logic of
the original code looked wrong and this change fixed the problem on my
system.

My scanner for A4 has some wiggleRoom for the width and nothing for the height,
switching the dimensions in the sum probably caused the problem. A
scanner with different geometry will probably behave differently.

Possible related bug:

M  +1    -1    src/options/pagesizeoption.cpp

https://invent.kde.org/libraries/ksanecore/-/commit/26016dba7ba14f336feb2975ffc26c82457c485f